fix: update metadata for letters

--- a/content/letters/how-i-invalidated-my-first-saas-idea.mdx
+++ b/content/letters/how-i-invalidated-my-first-saas-idea.mdx
@@ -1,5 +1,5 @@
 ---
-title: How I Invalidated My First SaaS Idea
+name: How I Invalidated My First SaaS Idea
 description: And what I learned from it.
 published: 2024-07-28
 ---
