--- a/content/letters/how-i-started-taking-action.mdx
+++ b/content/letters/how-i-started-taking-action.mdx
@@ -1,5 +1,5 @@
 ---
-title: How I Started Taking Action
+name: How I Started Taking Action
 description: And quit the cycle of "someday"
 published: 2024-07-21
 ---
