--- a/content/letters/how-to-get-better-ideas.mdx
+++ b/content/letters/how-to-get-better-ideas.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Get Better Ideas
+name: How to Get Better Ideas
 description: The unintuitive way to come up with good ideas
 published: 2024-09-22
 ---
