--- a/content/letters/if-i-wanted-to-start-a-side-hustle-id-do-this.mdx
+++ b/content/letters/if-i-wanted-to-start-a-side-hustle-id-do-this.mdx
@@ -1,5 +1,5 @@
 ---
-title: If I Wanted To Start a Side Hustle, I’d Do This
+name: If I Wanted To Start a Side Hustle, I’d Do This
 description: What I would tell myself 3 years ago.
 published: 2024-08-18
 ---
