--- a/content/letters/the-importance-of-intentional-consumption.mdx
+++ b/content/letters/the-importance-of-intentional-consumption.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Importance of 'Intentional Consumption'
+name: The Importance of 'Intentional Consumption'
 description: Creating vs Consuming
 published: 2024-10-06
 ---
