--- a/content/letters/why-i-made-learning-my-goal.mdx
+++ b/content/letters/why-i-made-learning-my-goal.mdx
@@ -1,5 +1,5 @@
 ---
-title: Why I Made Learning My Goal
+name: Why I Made Learning My Goal
 description: and turned "failure" into a good thing
 published: 2024-08-25
 ---
