--- a/content/letters/why-im-changing-my-content-strategy.mdx
+++ b/content/letters/why-im-changing-my-content-strategy.mdx
@@ -1,5 +1,5 @@
 ---
-title: Why I'm Changing My Content Strategy
+name: Why I'm Changing My Content Strategy
 description: and advice I'd give to beginners
 published: 2024-09-01
 ---
