--- a/content/letters/why-you-should-dollar-cost-average-your-side-hustle.mdx
+++ b/content/letters/why-you-should-dollar-cost-average-your-side-hustle.mdx
@@ -1,5 +1,5 @@
 ---
-title: Why You Should Dollar Cost Average Your Side Hustle
+name: Why You Should Dollar Cost Average Your Side Hustle
 description: The best advice I've heard about growing your side hustle.
 published: 2024-08-04
 ---
