--- a/content/letters/what-i-learned-from-52-weekly-newsletters.mdx
+++ b/content/letters/what-i-learned-from-52-weekly-newsletters.mdx
@@ -1,5 +1,5 @@
 ---
-title: What I Learned From 52 Weekly Newsletters
+name: What I Learned From 52 Weekly Newsletters
 description:
 published: 2024-09-15
 ---
