feat: add new content to site

--- a/content/stack/pc.mdx
+++ b/content/stack/pc.mdx
@@ -3,6 +3,8 @@ name: PC Build
 description: My gaming rig.
 seo_description: Cole Caccamise's Gaming PC build.
 position: 6
+feedback_text: What games are you playing?
+feedback_preview: Leave your email/socials if you want to chat!
 ---
 
 [Alienware 32" 4K 240 Hz Monitor](https://caccamise.link/alienware) - The best monitor I've ever gamed on. The picture quality is fantastic and the refresh rate is insane for games that can push it.
@@ -28,3 +30,15 @@ position: 6
 [1TB Intel SSD](https://caccamise.link/intel-ssd) - Great value-for-money M.2.
 
 [1TB Samsung SSD](https://caccamise.link/samsung-ssd) - A fast drive.
+
+### Games I'm Playing
+
+[Deadlock](https://colecaccamise.com/deadlock) - A new multiplayer MOBA game from Valve. It's a lot of fun.
+
+[Life is Strange: Double Exposures](https://store.steampowered.com/app/1874000/Life_is_Strange_Double_Exposure/) - The original Life is Strange is in my top 5 games of all time so I'm excited for this one to launch.
+
+[Cyberpunk 2077: Phantom Liberty](https://store.steampowered.com/app/2138330/Cyberpunk_2077_Phantom_Liberty/) - I was a huge fan of the base game and this DLC makes it even better.
+
+[Black Mesa](https://store.steampowered.com/app/362890/Black_Mesa/) - A remake of the original Half-Life. It's really well done and fun to play.
+
+[Fears to Fathom: Home Alone](https://store.steampowered.com/app/1671340/Fears_to_Fathom__Home_Alone/) - I recently came across the Fears to Fathom series and I love the atmosphere. It's also one of the scarier games I've played.
