--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -1,10 +1,10 @@
 ---
-name: VSCode Setup
+name: VSCode/Cursor Setup
 description: The extensions, theme, and settings I use.
 seo_description: Cole Caccamise's VSCode theme, extensions, and settings.
 feedback_text: What's your VSCode setup?
 feedback_preview: Extensions, theme, etc.
-position: 4
+position: 3
 ---
 
 [Cursor](https://caccamise.link/cursor) - I just started using Cursor, which is a fork of VSCode (all extensions still work) with Claude built-in. So far I'm finding it a lot more useful than Copilot.
