feat: update development stack

--- a/content/stack/development.mdx
+++ b/content/stack/development.mdx
@@ -23,7 +23,7 @@ position: 2
 
 [Next.js](https://nextjs.org) - I use Next as the frontend for all of my projects. Its server-side capabilites make it great for SEO and with small apps a separate backend may not be necessary.
 
-[Go/Golang](https://go.dev/) - Go is a clean and performant programming language I use for writing backend APIs. The standard library gives you a lot of the funtionality you'll need.
+[Go/Golang](https://go.dev/) - Go is a clean and performant programming language I use for writing backend APIs. The standard library gives you a lot of the functionality you'll need.
 
 [Chi](https://go-chi.io/) - A lightweight router for building Go HTTP services. It's built on the standard library and makes writing APIs a little simpler.
 
@@ -37,21 +37,23 @@ position: 2
 
 [Vercel](https://vercel.com) - Where I host all of my frontend projects. By far the easiest way to host Next.js and take advantage of Vercel's features (like edge functions and storage).
 
-[Railway](https://caccamise.link/railway) - Where I'll be hosting my backend APIs. I've heard it called "The Vercel for Backend".
+[Railway](https://caccamise.link/railway) - Where I host my backend services.
 
 [Supabase](https://supabase.com) - The PostgreSQL database I use for all of my projects. It's easy to build with and they handle auth with minimal setup.
 
 [Amazon S3](https://aws.amazon.com/s3) - Where I store all media files very cheaply.
 
-[Resend](https://resend.com) - How I send emails within my apps. Setting it up takes minutes and their Next.js SDK is great to work with.
+[Amazon CloudFront](https://aws.amazon.com/cloudfront/) - The CDN I put in front of my S3 buckets to speed up delivery.
 
-[React Email](https://react.email) - A collection of React components to design emails. It's maintained by Resend so it integreates nicely.
+[Resend](https://resend.com) - How I send emails within my apps. Setting it up takes minutes and their Next.js & Golang SDKs are great to work with.
+
+[React Email](https://react.email) - A collection of React components to design emails. It's maintained by Resend so it integrates nicely.
 
 [Kit](https://kit.com) - The platform I use to send my weekly newsletter. I'm using their API to have custom signup forms on my website.
 
 [Dub.co](https://caccamise.link/dub) - What I use to create shorten and track my links (<Link href='https://caccamise.link/'>caccamise.link</Link>). They also have a powerful API/SDK that is great if you need to implement link sharing in your app.
 
-[Plausible](https://plausible.io) - Privacy-focused analytics that are still super powerful.
+[Plausible](https://plausible.io) - Privacy-focused analytics that are super powerful.
 
 [Cloudflare](https://cloudflare.com) - I use their free plan to protect against DDoS attacks and manage my DNS settings.
 
