fix: drops metadata

--- a/content/drops/wave.mdx
+++ b/content/drops/wave.mdx
@@ -1,21 +1,21 @@
 ---
 name: Wave Wallpapers
 category: Wallpapers
-seoDescription: Wave wallpapers showcased on the Cole Caccamise YouTube channel.
-demoLink:
-oldPrice: 14
+seo_description: Wave wallpapers showcased on the Cole Caccamise YouTube channel.
+demo_link:
+old_price: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://store.colecaccamise.com/buy/55c7a8d2-8085-4d51-9329-d035415407f5
-socialImage: https://assets.colecaccamise.com/drops/wave/promo.png
-thumbnailImage: https://assets.colecaccamise.com/drops/wave/promo.png
-image1: https://assets.colecaccamise.com/drops/wave/promo.png
-image2: https://assets.colecaccamise.com/drops/wave/Desktop.png
-image3: https://assets.colecaccamise.com/drops/wave/Mobile.png
-image4: https://assets.colecaccamise.com/drops/wave/UW.png
-image5:
-image6:
+lemon_squeezy_link: https://store.colecaccamise.com/buy/55c7a8d2-8085-4d51-9329-d035415407f5
+social_image: https://assets.colecaccamise.com/drops/wave/promo.png
+thumbnail_image: https://assets.colecaccamise.com/drops/wave/promo.png
+image_1: https://assets.colecaccamise.com/drops/wave/promo.png
+image_2: https://assets.colecaccamise.com/drops/wave/Desktop.png
+image_3: https://assets.colecaccamise.com/drops/wave/Mobile.png
+image_4: https://assets.colecaccamise.com/drops/wave/UW.png
+image_5:
+image_6:
 position: 1
 ---
 
