--- a/content/drops/youtube-notion-template.mdx
+++ b/content/drops/youtube-notion-template.mdx
@@ -1,21 +1,21 @@
 ---
 name: YouTube Creator Template
 category: Notion Template
-seoDescription: Notion template used by Cole Caccamise to create YouTube videos.
-demoLink:
-oldPrice: 14
+seo_description: Notion template used by Cole Caccamise to create YouTube videos.
+demo_link:
+old_price: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://store.colecaccamise.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
-socialImage: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
-thumbnailImage: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
-image1: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
-image2: https://assets.colecaccamise.com/drops/youtube-notion-template/image+2.png
-image3:
-image4:
-image5:
-image6:
+lemon_squeezy_link: https://store.colecaccamise.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
+social_image: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
+thumbnail_image: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
+image_1: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
+image_2: https://assets.colecaccamise.com/drops/youtube-notion-template/image+2.png
+image_3:
+image_4:
+image_5:
+image_6:
 position: 4
 ---
 
