--- a/content/drops/creatorpreneur.mdx
+++ b/content/drops/creatorpreneur.mdx
@@ -1,21 +1,21 @@
 ---
 name: Creatorpreneur - Creator Framer Template
 category: Framer Template
-seoDescription: Creatorpreneur is the ultimate Framer Template for creators. Easily sell digital products, write blog articles, and share links to your socials.
-demoLink: https://creatorpreneur.framer.website/
-oldPrice: 49
+seo_description: Creatorpreneur is the ultimate Framer Template for creators. Easily sell digital products, write blog articles, and share links to your socials.
+demo_link: https://creatorpreneur.framer.website/
+old_price: 49
 price: 39
 popular: false
 affiliate: false
-lemonSqueezyLink: https://store.websignr.com/buy/2b0bc309-1646-4a46-80a5-6746bdeeb49f
-socialImage: https://assets.colecaccamise.com/drops/creatorpreneur/promo.png
-thumbnailImage: https://assets.colecaccamise.com/drops/creatorpreneur/promo.png
-image1: https://assets.colecaccamise.com/drops/creatorpreneur/image+1.png
-image2: https://assets.colecaccamise.com/drops/creatorpreneur/image+2.png
-image3: https://assets.colecaccamise.com/drops/creatorpreneur/image+3.png
-image4: https://assets.colecaccamise.com/drops/creatorpreneur/image+4.png
-image5: https://assets.colecaccamise.com/drops/creatorpreneur/image+5.png
-image6: https://assets.colecaccamise.com/drops/creatorpreneur/image+6.png
+lemon_squeezy_link: https://store.websignr.com/buy/2b0bc309-1646-4a46-80a5-6746bdeeb49f
+social_image: https://assets.colecaccamise.com/drops/creatorpreneur/promo.png
+thumbnail_image: https://assets.colecaccamise.com/drops/creatorpreneur/promo.png
+image_1: https://assets.colecaccamise.com/drops/creatorpreneur/image+1.png
+image_2: https://assets.colecaccamise.com/drops/creatorpreneur/image+2.png
+image_3: https://assets.colecaccamise.com/drops/creatorpreneur/image+3.png
+image_4: https://assets.colecaccamise.com/drops/creatorpreneur/image+4.png
+image_5: https://assets.colecaccamise.com/drops/creatorpreneur/image+5.png
+image_6: https://assets.colecaccamise.com/drops/creatorpreneur/image+6.png
 position: 5
 ---
 
