--- a/content/drops/gradient.mdx
+++ b/content/drops/gradient.mdx
@@ -1,21 +1,21 @@
 ---
 name: Gradient Wallpapers
 category: Wallpapers
-seoDescription: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
-demoLink:
-oldPrice: 14
+seo_description: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
+demo_link:
+old_price: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://store.colecaccamise.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://assets.colecaccamise.com/drops/gradient/Social+Graph+Image+-+Gradient.png
-thumbnailImage: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
-image1: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
-image2: https://assets.colecaccamise.com/drops/gradient/Desktop+Promo+Images.png
-image3: https://assets.colecaccamise.com/drops/gradient/Phone+Promo+Images.png
-image4: https://assets.colecaccamise.com/drops/gradient/UW+Promo+Images.png
-image5:
-image6:
+lemon_squeezy_link: https://store.colecaccamise.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
+social_image: https://assets.colecaccamise.com/drops/gradient/Social+Graph+Image+-+Gradient.png
+thumbnail_image: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image_1: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image_2: https://assets.colecaccamise.com/drops/gradient/Desktop+Promo+Images.png
+image_3: https://assets.colecaccamise.com/drops/gradient/Phone+Promo+Images.png
+image_4: https://assets.colecaccamise.com/drops/gradient/UW+Promo+Images.png
+image_5:
+image_6:
 position: 3
 ---
 
