--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -1,25 +1,25 @@
 ---
 name: Prism Wallpapers
 category: Wallpapers
-seoDescription: Prism wallpapers showcased on the Cole Caccamise YouTube channel.
-demoLink:
-oldPrice: 14
+seo_description: Prism wallpapers showcased on the Cole Caccamise YouTube channel.
+demo_link:
+old_price: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://store.colecaccamise.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
-socialImage: https://assets.colecaccamise.com/drops/prism/promo.png
-thumbnailImage: https://assets.colecaccamise.com/drops/prism/promo.png
-image1: https://assets.colecaccamise.com/drops/prism/promo.png
-image2: https://assets.colecaccamise.com/drops/prism/desktop.png
-image3: https://assets.colecaccamise.com/drops/prism/mobile.png
-image4:
-image5:
-image6:
+lemon_squeezy_link: https://store.colecaccamise.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
+social_image: https://assets.colecaccamise.com/drops/prism/promo.png
+thumbnail_image: https://assets.colecaccamise.com/drops/prism/promo.png
+image_1: https://assets.colecaccamise.com/drops/prism/promo.png
+image_2: https://assets.colecaccamise.com/drops/prism/desktop.png
+image_3: https://assets.colecaccamise.com/drops/prism/mobile.png
+image_4:
+image_5:
+image_6:
 position: 2
-testimonialName: Charlie
+testimonial_name: Charlie
 testimonial: Amazing wallpapers. Delivered as promised and very professional.
-testimonialUrl: https://senja.io/p/cole-caccamise/t/97654053-722d-424f-8d2d-663e873e0c22
+testimonial_url: https://senja.io/p/cole-caccamise/t/97654053-722d-424f-8d2d-663e873e0c22
 ---
 
 A collection of over 20 high-quality wallpapers perfect for both desktop and
