--- a/content/letters/are-you-working-on-the-right-thing.mdx
+++ b/content/letters/are-you-working-on-the-right-thing.mdx
@@ -49,7 +49,7 @@ _links to valuable stuff I thought was worth sharing_
 
 [_15 Years of Software Engineer Knowledge in 1 hour 30 mins_](https://www.youtube.com/watch?v=PJPFLHw8lKI) - This was an incredibly tactical video on how to grow and network as a software engineer.
 
-[_What Large-Scale Software Looks Like_](https://www.youtube.com/watch?v=aHZz_6NhQkQ) - An interesting overview on microservices and building scalable code.
+[_What Large-Scale Software Looks Like_](https://www.youtube.com/watch?v=aHZz_6NhQkQ) - An interesting overview on micro-services and building scalable code.
 
 Have a great week.
 
