feat: add dark mesh wallpapers

--- a/content/drops/creatorpreneur.mdx
+++ b/content/drops/creatorpreneur.mdx
@@ -3,7 +3,7 @@ name: Creatorpreneur - Creator Framer Template
 category: Framer Template
 seo_description: Creatorpreneur is the ultimate Framer Template for creators. Easily sell digital products, write blog articles, and share links to your socials.
 demo_link: https://creatorpreneur.framer.website/
-old_price: 49
+old_price:
 price: 39
 popular: false
 affiliate: false
@@ -16,7 +16,7 @@ image_3: https://assets.colecaccamise.com/drops/creatorpreneur/image+3.png
 image_4: https://assets.colecaccamise.com/drops/creatorpreneur/image+4.png
 image_5: https://assets.colecaccamise.com/drops/creatorpreneur/image+5.png
 image_6: https://assets.colecaccamise.com/drops/creatorpreneur/image+6.png
-position: 5
+position: 6
 ---
 
 Creatorpreneur is the ultimate Framer Template for creators.
