--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -3,7 +3,7 @@ name: Prism Wallpapers
 category: Wallpapers
 seo_description: Prism wallpapers showcased on the Cole Caccamise YouTube channel.
 demo_link:
-old_price: 14
+old_price:
 price: 9
 popular: false
 affiliate: false
@@ -16,7 +16,7 @@ image_3: https://assets.colecaccamise.com/drops/prism/mobile.png
 image_4:
 image_5:
 image_6:
-position: 2
+position: 3
 testimonial_name: Charlie
 testimonial: Amazing wallpapers. Delivered as promised and very professional.
 testimonial_url: https://senja.io/p/cole-caccamise/t/97654053-722d-424f-8d2d-663e873e0c22
