--- a/content/drops/youtube-notion-template.mdx
+++ b/content/drops/youtube-notion-template.mdx
@@ -3,7 +3,7 @@ name: YouTube Creator Template
 category: Notion Template
 seo_description: Notion template used by Cole Caccamise to create YouTube videos.
 demo_link:
-old_price: 14
+old_price:
 price: 9
 popular: false
 affiliate: false
@@ -16,7 +16,7 @@ image_3:
 image_4:
 image_5:
 image_6:
-position: 4
+position: 5
 ---
 
 This Notion Template is the system I use every week to make YouTube videos. It's helped me gain 30,000 subscribers and 7,000,000 channel views.
