--- a/content/drops/gradient.mdx
+++ b/content/drops/gradient.mdx
@@ -3,7 +3,7 @@ name: Gradient Wallpapers
 category: Wallpapers
 seo_description: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
 demo_link:
-old_price: 14
+old_price:
 price: 9
 popular: false
 affiliate: false
@@ -16,7 +16,7 @@ image_3: https://assets.colecaccamise.com/drops/gradient/Phone+Promo+Images.png
 image_4: https://assets.colecaccamise.com/drops/gradient/UW+Promo+Images.png
 image_5:
 image_6:
-position: 3
+position: 4
 ---
 
 A collection of 20 gradient wallpapers in 6K resolution, perfect for both
