--- a/content/drops/wave.mdx
+++ b/content/drops/wave.mdx
@@ -3,7 +3,7 @@ name: Wave Wallpapers
 category: Wallpapers
 seo_description: Wave wallpapers showcased on the Cole Caccamise YouTube channel.
 demo_link:
-old_price: 14
+old_price:
 price: 9
 popular: false
 affiliate: false
@@ -16,7 +16,7 @@ image_3: https://assets.colecaccamise.com/drops/wave/Mobile.png
 image_4: https://assets.colecaccamise.com/drops/wave/UW.png
 image_5:
 image_6:
-position: 1
+position: 2
 ---
 
 A collection of 15 wavy wallpapers in 6K resolution, perfect for both
