feat: add discount prop to drops

--- a/content/drops/mesh.mdx
+++ b/content/drops/mesh.mdx
@@ -3,11 +3,12 @@ name: Dark Mesh Wallpapers
 category: Wallpapers
 seo_description: Dark mesh wallpapers showcased on the Cole Caccamise YouTube channel.
 demo_link:
-old_price:
-price: 9
+old_price: 9
+price: 8
 popular: false
 affiliate: false
 lemon_squeezy_link: https://store.colecaccamise.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc
+discount_code: LAUNCH
 social_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
 thumbnail_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
 image_1: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
@@ -17,6 +18,8 @@ image_4: https://assets.colecaccamise.com/drops/mesh/Ultrawide.png
 image_5:
 image_6:
 position: 1
+cta_text: "Buy Now (10% off)"
+cta_sub_text: "Launch discount lasts until January 26th, 8 AM EST"
 ---
 
 A collection of 20 dark mesh wallpapers in 5K resolution, perfect for both
