chore: update old s3 urls

--- a/content/drops/mesh.mdx
+++ b/content/drops/mesh.mdx
@@ -9,10 +9,10 @@ popular: false
 affiliate: false
 lemon_squeezy_link: https://store.colecaccamise.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc
 discount_code:
-social_image: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/mesh/dark-mesh.png
-thumbnail_image: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/mesh/dark-mesh.png
-image_1: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/mesh/dark-mesh.png
-image_2: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/mesh/Desktop.png
+social_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
+thumbnail_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
+image_1: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
+image_2: https://assets.colecaccamise.com/drops/mesh/Desktop.png
 image_3: https://assets.colecaccamise.com/drops/mesh/Mobile.png
 image_4: https://assets.colecaccamise.com/drops/mesh/Ultrawide.png
 image_5:
