--- a/content/letters/how-i-invalidated-my-first-saas-idea.mdx
+++ b/content/letters/how-i-invalidated-my-first-saas-idea.mdx
@@ -63,7 +63,7 @@ There was then a “Learn more” button that went straight to the landing page.
 
 Here’s what the Facebook ad looked like:
 
-![Owly Facebook Ad](https://colecaccamise.s3.amazonaws.com/letters/how-i-invalidated-my-first-saas-idea/owly+facebook+ad.png)
+![Owly Facebook Ad](https://assets.colecaccamise.com/letters/how-i-invalidated-my-first-saas-idea/owly+facebook+ad.png)
 
 The results from the ads were:
 
@@ -86,7 +86,7 @@ Humata, a similar tool to this would-be SaaS.
 It makes sense given the topic of the video, but all remaining 5 had came from
 that video.
 
-![Tally submissions](https://colecaccamise.s3.amazonaws.com/letters/how-i-invalidated-my-first-saas-idea/tally+screenshot.png)
+![Tally submissions](https://assets.colecaccamise.com/letters/how-i-invalidated-my-first-saas-idea/tally+screenshot.png)
 
 The website in total received 154 page views from Sunday-Thursday until I turned
 off the ads, which would be just about a 3% sign up rate in total.
