--- a/content/letters/how-i-stay-patient.mdx
+++ b/content/letters/how-i-stay-patient.mdx
@@ -32,7 +32,7 @@ I’ve been testing the Dell XPS 14 recently and it’s pleasantly surprised me.
 
 ## NEW - Wave Wallpapers
 
-![Wave Wallpapers](https://colecaccamise.s3.amazonaws.com/drops/wave/promo.png)
+![Wave Wallpapers](https://assets.colecaccamise.com/drops/wave/promo.png)
 
 I just dropped a new wavy wallpaper pack and these are my favorite ones yet.
 
