--- a/content/letters/why-you-should-dollar-cost-average-your-side-hustle.mdx
+++ b/content/letters/why-you-should-dollar-cost-average-your-side-hustle.mdx
@@ -28,7 +28,7 @@ It’s been almost a year since I started uploading once per week on YouTube, an
 
 When I saw the largest amount of growth was once I picked a date and time to show up each week. It’s not been explosive but the graph says a lot:
 
-![Graph of my YouTube growth](https://colecaccamise.s3.amazonaws.com/letters/why-you-should-dollar-cost-average-your-side-hustle/youtube-growth.png)
+![Graph of my YouTube growth](https://assets.colecaccamise.com/letters/why-you-should-dollar-cost-average-your-side-hustle/youtube-growth.png)
 
 I no longer pay that much attention to the views each week because I know across a long enough time horizon things will go up.
 
