--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -45,7 +45,7 @@ position: 3
 
 <Link
   className="btn btn-contrast w-fit text-app-bg"
-  href="https://colecaccamise.s3.amazonaws.com/stack/vscode/vintage-vscode.icns"
+  href="https://assets.colecaccamise.com/stack/vscode/vintage-vscode.icns"
 >
   <span className="text-app-bg">Download Vintage VSCode Icon</span>
 </Link>
