--- a/content/letters/how-i-come-up-with-unique-ideas.mdx
+++ b/content/letters/how-i-come-up-with-unique-ideas.mdx
@@ -6,7 +6,7 @@ published: 2025-02-09
 
 Coming up with unique ideas has been something I’ve spent years _wondering_ how to do.
 
-I think a lack of ideas is what paralyzes most people from starting a business, a youtube channel, or whatever endeavor they’re interested in.
+I think a lack of ideas is what paralyzes most people from starting a business, a YouTube channel, or whatever endeavor they’re interested in.
 
 I’ve known for years I want to ship a software product but never bothered building _anything_ because I didn’t have any “good ideas”.
 
@@ -24,7 +24,7 @@ Any time I get annoyed with a product or have a problem running my business, I j
 
 Every night I try to reflect on the day and just focus on what problems I encountered.
 
-Being ok with writing down the worst ideas I can come up with is a prerequisite to finding good ideas.
+Being OK with writing down the worst ideas I can come up with is a prerequisite to finding good ideas.
 
 Of my current ideas I consider ‘good’, they’re all rather simple.
 
@@ -32,7 +32,7 @@ This is incredibly important - nearly all massive companies today started as a n
 
 In addition to writing down the ideas I come up with, actually building the smallest of them to flex my ‘building muscle’ has been valuable.
 
-Just yesterday I spent an hour writing a simple app that sends me a Slack message when I’m sent data from Stripe during development because I got annoyed that I would lose this data if I forgot to have my backend environment running.
+Just yesterday I spent an hour writing a simple app ([the repo in case you're curious](https://github.com/ColeCaccamise/telemetry)) that sends me a Slack message when I’m sent data from Stripe during development because I got annoyed that I would lose this data if I forgot to have my backend environment running.
 
 The best ideas are found in the places you haven’t been yet.
 
@@ -50,7 +50,7 @@ _links to valuable stuff I thought was worth sharing_
 
 [_curated.design_](http://curated.design) - A design inspiration site a friend send the other day. Tons of great designs on here that I’ve already taken some inspiration from.
 
-[_How to Stop Procrastinating and Finally Take Action_](https://www.youtube.com/watch?v=8urzOH10LEM) - A great video from Ali Abdaal. Asking yourself what you fear is my biggest takeaway. Oftentimes it’s the fear of [judegement](https://youtu.be/UvDeIxT9sjs) by people who don’t actually care
+[_How to Stop Procrastinating and Finally Take Action_](https://www.youtube.com/watch?v=8urzOH10LEM) - A great video from Ali Abdaal. Asking yourself what you fear is my biggest takeaway. Oftentimes it’s the fear of judgement by people who don’t actually care
 
 [_Six stages of a good software engineer_](https://www.youtube.com/watch?v=OoXN1wY2LrI) - I’ve been watching a lot of Hussein’s videos recently. He explains backend concepts incredibly well.
 
