update video url

--- a/content/letters/how-i-come-up-with-unique-ideas.mdx
+++ b/content/letters/how-i-come-up-with-unique-ideas.mdx
@@ -38,7 +38,7 @@ The best ideas are found in the places you haven’t been yet.
 
 ## M4 Max MacBook Pro - The TRUTH After 3 Months!
 
-<VideoPlayer url="https://youtu.be/UvDeIxT9sjs" />
+<VideoPlayer url="https://youtu.be/gBsEvjnlIIY" />
 
 After 3 months of using the M4 Max MacBook, I made a video sharing my development experience with it.
 
