add editor pitch to newsletter

--- a/content/letters/what-if-you-actually-tried.mdx
+++ b/content/letters/what-if-you-actually-tried.mdx
@@ -56,4 +56,4 @@ Have a great week.
 
 Cole
 
-P.S. If you found this letter helpful, please consider sharing it with a friend :)
+P.S. I'm looking to hire an editor part-time to help me improve the videos. ​[Apply here](https://colecaccamise.com/jobs/video-editor) (or send someone you know) if interested.
