--- a/content/jobs/video-editor.mdx
+++ b/content/jobs/video-editor.mdx
@@ -24,12 +24,13 @@ This will start as a remote position but you'll have the opportunity to work in 
 
 #### Compensation
 
-This is a contrast position and you'll be paid a flat fee per video. We can also discuss a percentage of the channel's revenue.
+This is a contrast position and you'll be paid a flat fee per video.
 
 #### How to apply
 
-Reach out to Cole at [cole@caccamedia.com](mailto:cole@caccamedia.com) with the job title in the subject line.
-
-Send me links to your best work and ideas you have for the channel.
-
-If you're a good fit we'll schedule a call and plan a trial run of 1-2 videos (that will be paid).
+<Link
+  className="btn btn-primary w-fit"
+  href="https://caccamise.link/video-editor"
+>
+  <span className="text-white">Apply here</span>
+</Link>
