--- a/content/jobs/video-editor.mdx
+++ b/content/jobs/video-editor.mdx
@@ -8,7 +8,7 @@ I currently edit all of my videos by myself. I'm looking for someone who can hel
 
 I'm aiming for 2-4 videos per month where you'd have a minimum of 1 week to edit the video.
 
-You'll be an integral part of the channel and help me expirement with new styles of content.
+You'll be an integral part of the channel and help me experiment with new styles of content.
 
 We'll make more of the tech videos I've always created but also learn how to make great coding/software-focused content.
 
