--- a/content/letters/im-building-my-first-startup.mdx
+++ b/content/letters/im-building-my-first-startup.mdx
@@ -30,4 +30,4 @@ Have a great week.
 
 Cole
 
-P.S. Reply with what you’re currently working on. Let’s go on this journey together :)
+P.S. [Let me know](mailto:cole@colecaccamise.com) what you're currently working on. Let's go on this journey together :)
