update job postings

--- a/content/jobs/thumbnail-designer.mdx
+++ b/content/jobs/thumbnail-designer.mdx
@@ -24,7 +24,7 @@ This will start as a remote position but you'll have the opportunity to work in 
 
 #### Compensation
 
-This is a contrast position and you'll be paid a flat fee per video.
+This is a contract position and you'll be paid a flat fee per video.
 
 #### How to apply
 
