--- a/content/jobs/video-editor.mdx
+++ b/content/jobs/video-editor.mdx
@@ -24,13 +24,8 @@ This will start as a remote position but you'll have the opportunity to work in 
 
 #### Compensation
 
-This is a contrast position and you'll be paid a flat fee per video.
+This is a contract position and you'll be paid a flat fee per video.
 
 #### How to apply
 
-<Link
-  className="btn btn-primary w-fit"
-  href="https://caccamise.link/video-editor"
->
-  <span className="text-white">Apply here</span>
-</Link>
+Applications are now closed. While I'm not actively hiring for this position, I'm always interested in connecting with talented people. Feel free to reach out to Cole at [cole@caccamedia.com](mailto:cole@caccamedia.com).
