--- a/content/drops/creatorpreneur.mdx
+++ b/content/drops/creatorpreneur.mdx
@@ -29,4 +29,4 @@ Benefits:
 - High-speed performance (97 lighthouse score)
 
 If you have any questions, please send an email to
-[cole@caccamise.com](mailto:cole@caccamise.com)
+[cole@colecaccamise.com.com](mailto:cole@colecaccamise.com.com)
