--- a/content/drops/wave.mdx
+++ b/content/drops/wave.mdx
@@ -23,7 +23,7 @@ A collection of 15 wavy wallpapers in 6K resolution, perfect for both
 desktop and mobile.
 
 If you have any questions/problems, please send me an email:
-[cole@caccamise.com](mailto:cole@caccamise.com)
+[cole@colecaccamise.com.com](mailto:cole@colecaccamise.com.com)
 
 For personal use only. These files are not meant for reselling, distribution, or
 commercial use.
