--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -26,7 +26,7 @@ A collection of over 20 high-quality wallpapers perfect for both desktop and
 mobile.
 
 If you have any questions/problems, please send me an email:
-[cole@caccamise.com](mailto:cole@caccamise.com)
+[cole@colecaccamise.com.com](mailto:cole@colecaccamise.com.com)
 
 For personal use only. These files are not meant for reselling, distribution, or
 commercial use**.**
