feat: new letter

--- a/content/letters/simple-saas-mistake.mdx
+++ b/content/letters/simple-saas-mistake.mdx
@@ -29,7 +29,7 @@ I’ve spent at least 8 hours just debugging weird build issues and other errors
 
 The second benefit, and the one that I think is more important, is it makes what you’re building feel real.
 
-Having an app on [localhost](http://localhost) just feels like another side project you’re going to abandon next week.
+Having an app on localhost just feels like another side project you’re going to abandon next week.
 
 When you deploy it on a real domain you can visit on any one of your devices, the thing you built is more useful and makes sense to improve.
 
