--- a/content/letters/how-to-move-faster.mdx
+++ b/content/letters/how-to-move-faster.mdx
@@ -40,7 +40,7 @@ I’ve been building in a black box, afraid of any negative feedback.
 
 But if I ever want to be successful I have to be willing to take it.
 
-Next sunday I’ll be opening up the beta for Creator Kiwi to the first group of users.
+Next Sunday, I’ll be opening up the beta for Creator Kiwi to the first group of users.
 
 I have a feeling I’ll ship more in the next week than I have in 3 months.
 
