learn to grammar bud

--- a/content/letters/how-to-move-faster.mdx
+++ b/content/letters/how-to-move-faster.mdx
@@ -46,7 +46,7 @@ I have a feeling I’ll ship more in the next week than I have in 3 months.
 
 If you or someone you know creates content on YouTube, I invite you to sign up - https://app.creatorkiwi.com/auth/signup
 
-For everyone else, I hope you’ll find value from my journey. It’s only just beginning.
+For everyone else, I hope you’ll find value in my journey. It’s only just beginning.
 
 Have a great week.
 
