--- a/content/letters/i-just-launched-my-first-saas.mdx
+++ b/content/letters/i-just-launched-my-first-saas.mdx
@@ -30,7 +30,7 @@ Currently, it's able to:
 
 I have huge visions for what this can become, but my current focus is to make it valuable for other builders and people sharing their work on the internet.
 
-You can read the announcement post [here](https://creatorkiwi.com/blog/meet-creatorkiwi) and [sign up](https://creator.kiwi/muv8gv7) for free today.
+You can read the announcement post [here](https://creator.kiwi/OL6l5ww) and [sign up](https://creator.kiwi/muv8gv7) for free today.
 
 If you sign up, reply with the email you used and I'll give you access.
 
