--- a/content/jobs/video-editor.mdx
+++ b/content/jobs/video-editor.mdx
@@ -2,6 +2,7 @@
 name: Video Editor
 description: Help edit videos on the Cole Caccamise channel
 location: Remote
+open: false
 ---
 
 I currently edit all of my videos by myself. I'm looking for someone who can help me edit on a regular basis.
