--- a/content/letters/start-over.mdx
+++ b/content/letters/start-over.mdx
@@ -1,6 +1,6 @@
 ---
 title: If I Had To Start Over With Programming, This Is What I’d Do
-description: Advice I wish heard 8+ years ago
+description: Advice I wish I heard 8+ years ago
 published: 2025-08-10
 ---
 
@@ -32,7 +32,7 @@ If you’re still focused on learning to code, by far the highest ROI thing you 
 
 Do it in a tech stack you’re already comfortable with or want to be.
 
-The more experience you get with those set of technologies, the faster you get at buidling.
+The more experience you get with those set of technologies, the faster you get at building.
 
 Forget everyone talking about the hottest new frameworks and just use what you enjoy.
 
