--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -29,4 +29,4 @@ If you have any questions/problems, please send me an email:
 [cole@colecaccamise.com](mailto:cole@colecaccamise.com)
 
 For personal use only. These files are not meant for reselling, distribution, or
-commercial use**.**
+commercial use.
