--- a/content/drops/gradient.mdx
+++ b/content/drops/gradient.mdx
@@ -7,7 +7,7 @@ old_price:
 price: 9
 popular: false
 affiliate: false
-lemon_squeezy_link: https://store.colecaccamise.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
+lemon_squeezy_link: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
 social_image: https://assets.colecaccamise.com/drops/gradient/Social+Graph+Image+-+Gradient.png
 thumbnail_image: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
 image_1: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
