--- a/content/drops/mesh.mdx
+++ b/content/drops/mesh.mdx
@@ -7,7 +7,7 @@ old_price:
 price: 9
 popular: false
 affiliate: false
-lemon_squeezy_link: https://store.colecaccamise.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc
+lemon_squeezy_link: https://colecaccamise.lemonsqueezy.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc
 discount_code:
 social_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
 thumbnail_image: https://assets.colecaccamise.com/drops/mesh/dark-mesh.png
