--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -7,7 +7,7 @@ old_price:
 price: 9
 popular: false
 affiliate: false
-lemon_squeezy_link: https://store.colecaccamise.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
+lemon_squeezy_link: https://colecaccamise.lemonsqueezy.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
 social_image: https://assets.colecaccamise.com/drops/prism/promo.png
 thumbnail_image: https://assets.colecaccamise.com/drops/prism/promo.png
 image_1: https://assets.colecaccamise.com/drops/prism/promo.png
