--- a/content/drops/wave.mdx
+++ b/content/drops/wave.mdx
@@ -7,7 +7,7 @@ old_price:
 price: 9
 popular: false
 affiliate: false
-lemon_squeezy_link: https://store.colecaccamise.com/buy/55c7a8d2-8085-4d51-9329-d035415407f5
+lemon_squeezy_link: https://colecaccamise.lemonsqueezy.com/buy/55c7a8d2-8085-4d51-9329-d035415407f5
 social_image: https://assets.colecaccamise.com/drops/wave/promo.png
 thumbnail_image: https://assets.colecaccamise.com/drops/wave/promo.png
 image_1: https://assets.colecaccamise.com/drops/wave/promo.png
