--- a/content/drops/youtube-notion-template.mdx
+++ b/content/drops/youtube-notion-template.mdx
@@ -7,7 +7,7 @@ old_price:
 price: 9
 popular: false
 affiliate: false
-lemon_squeezy_link: https://store.colecaccamise.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
+lemon_squeezy_link: https://colecaccamise.lemonsqueezy.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
 social_image: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
 thumbnail_image: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
 image_1: https://assets.colecaccamise.com/drops/youtube-notion-template/promo.png
