--- a/content/letters/everything-is-an-unfair-advantage.mdx
+++ b/content/letters/everything-is-an-unfair-advantage.mdx
@@ -30,7 +30,7 @@ My first video of 2025 is talking about my experience with a Corsair prebuilt. I
 
 A collection of 20 5K wallpapers that look stunning on Desktop and Mobile.
 
-For the next week, you can take 10% off with the launch discount [here](https://store.colecaccamise.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc?checkout[discount_code]=LAUNCH) or use the code `LAUNCH` at checkout.
+For the next week, you can take 10% off with the launch discount [here](https://colecaccamise.lemonsqueezy.com/buy/77875809-aaa3-4789-9ced-8fee71763dfc?checkout[discount_code]=LAUNCH) or use the code `LAUNCH` at checkout.
 
 ## Things I’ve found interesting
 
