update pc setup

--- a/content/stack/pc.mdx
+++ b/content/stack/pc.mdx
@@ -31,14 +31,22 @@ feedback_preview: Leave your email/socials if you want to chat!
 
 [1TB Samsung SSD](https://caccamise.link/samsung-ssd) - A fast drive.
 
+### VR
+
+[Meta Quest 3](https://creator.kiwi/kbdCjsZ) - I use the quest for a couple of standalone games but mostly as a wireless PCVR headset. I just upgraded from the 2 and am loving it. The display quality is a bit better and full color passthrough is great.
+
+[Virtual Desktop](https://creator.kiwi/1wHOvVX) - A PC streaming app that I've found to be more stable and higher quality than Quest Link. I'd recommend connecting your PC to your router over ethernet if possible.
+
+[BoboVR M3 Pro Head Strap](https://creator.kiwi/s8M8EyY) - A must-have accessory imo. I hated the default strap from the Quest 2 and imagined the 3 would feel similar. This distributes the weight really well - I have no problems wearing it for hours.
+
+[BOBOVR B2 Battery Pack](https://creator.kiwi/ZwEVx74) - Slaps onto the back of the head strap. I cycle these as I'm playing and it extends the headset battery life significantly. With 2 or 3 of these you could literally play all day.
+
 ### Games I'm Playing
 
-[Deadlock](https://colecaccamise.com/deadlock) - A new multiplayer MOBA game from Valve. It's a lot of fun.
+[Batman: Arkham Shadow](https://creator.kiwi/ChCFmYg) - A big reason I bought the Quest 3 (my bundle came with it). This game is phenomenal, by far the best VR game I've tried. The story is great, the world is immersive, and combat is fun (after some getting used to).
 
-[Life is Strange: Double Exposures](https://store.steampowered.com/app/1874000/Life_is_Strange_Double_Exposure/) - The original Life is Strange is in my top 5 games of all time so I'm excited for this one to launch.
+[Vertigo Remastered](https://store.steampowered.com/app/1318090/Vertigo_Remastered/) - A great sci-fi PCVR game. It took a lot of inspiration from Half-Life but in a good way. The world feels unique and the gameplay is fun.
 
-[Cyberpunk 2077: Phantom Liberty](https://store.steampowered.com/app/2138330/Cyberpunk_2077_Phantom_Liberty/) - I was a huge fan of the base game and this DLC makes it even better.
+[Lost Records: Bloom and Rage](https://store.steampowered.com/app/1902960/Lost_Records_Bloom__Rage/) - Made by the original developers of Life is Strange. I'm a big fan of these kind of story-driven games.
 
-[Black Mesa](https://store.steampowered.com/app/362890/Black_Mesa/) - A remake of the original Half-Life. It's really well done and fun to play.
-
-[Fears to Fathom: Home Alone](https://store.steampowered.com/app/1671340/Fears_to_Fathom__Home_Alone/) - I recently came across the Fears to Fathom series and I love the atmosphere. It's also one of the scarier games I've played.
+[DEATH IN UNISON](https://store.steampowered.com/app/2454890/DEATH_IN_UNISON/) - Stumbled across this looking for a co-op horror hame. It's very unique and a ton of fun with a friend.
