update stack & bio

--- a/content/stack/development.mdx
+++ b/content/stack/development.mdx
@@ -21,6 +21,8 @@ position: 2
 
 ### Languages/Frameworks
 
+[Rails](https://rubyonrails.org) - I've used Rails professionally for ~2 years. The developer experience is unmatched. Implementing new features is fast and tools like the Rails console are invaluable.
+
 [Next.js](https://nextjs.org) - I use Next as the frontend for all of my projects. Its server-side capabilites make it great for SEO and with small apps a separate backend may not be necessary.
 
 [Go/Golang](https://go.dev/) - Go is a clean and performant programming language I use for writing backend APIs. The standard library gives you a lot of the functionality you'll need.
@@ -39,25 +41,21 @@ position: 2
 
 [Railway](https://creator.kiwi/Ez4XC2O) - Where I host my backend services.
 
-[Supabase](https://supabase.com) - The PostgreSQL database I use for all of my projects. It's easy to build with and they handle auth with minimal setup.
+[Neon](https://neon.com) - The PostgreSQL database I use for all of my projects. Great pricing, especially for indies with multiple projects.
 
 [Amazon S3](https://aws.amazon.com/s3) - Where I store all media files very cheaply.
 
 [Amazon CloudFront](https://aws.amazon.com/cloudfront/) - The CDN I put in front of my S3 buckets to speed up delivery.
 
-[Resend](https://resend.com) - How I send emails within my apps. Setting it up takes minutes and their Next.js & Golang SDKs are great to work with.
-
-[React Email](https://react.email) - A collection of React components to design emails. It's maintained by Resend so it integrates nicely.
+[Loops](https://loops.so) - How I send emails within my apps. They handle both transactional and marketing emails.
 
 [Kit](https://kit.com) - The platform I use to send my weekly newsletter. I'm using their API to have custom signup forms on my website.
 
-[Dub.co](https://caccamise.link/dub) - What I use to create shorten and track my links (<Link href='https://caccamise.link/'>caccamise.link</Link>). They also have a powerful API/SDK that is great if you need to implement link sharing in your app.
-
-[Plausible](https://plausible.io) - Privacy-focused analytics that are super powerful.
+[Seline](https://creator.kiwi/zP7Arlo) - Privacy-focused analytics that are super powerful. Beautiful dashboard UI.
 
 [Cloudflare](https://cloudflare.com) - I use their free plan to protect against DDoS attacks and manage my DNS settings.
 
-[Lemon Squeezy](https://lemonsqueezy.com) - Where I currently sell my digital products. They handle global tax compliance which saves me a lot of headaches.
+[Polar](https://polar.sh) - I'm migrating all of my digital products over to Polar. They're an open-source developer-friendly payments platform that makes selling products easy.
 
 ### Domains
 
